fix issue with scrollbar appearing

--- a/src/App.scss
+++ b/src/App.scss
@@ -92,11 +92,10 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows:
-    95px
-    //  10%
-    12%
-    2fr
-    45px; /*<<consider using mixin here if space need be re-adjused for other viewports>>*/
+  1fr 
+  1.25fr 
+  7fr 
+  0.5fr;
   grid-template-areas:
     "nav-bar"
     //"header-section"
@@ -260,7 +259,7 @@
 
         .card-title {
           //h1
-          background: cyan;
+          //background: cyan;
           font-size: 20px; //<<>>
 
           /*handles text overflow for long titles & limit title information to 3 lines to prevent display issues within card*/
@@ -271,7 +270,7 @@
         }
         .card-subtitle {
           //h2
-          background: grey;
+          //background: grey;
           font-size: 15px; //<<>>
 
           /*handles text overflow for long subtitles & limit subtitle information to 2 lines to prevent display issues within card*/
